--- a/index.html
+++ b/index.html
@@ -198,5 +198,5 @@
 			Powered by: <a href="https://templated.co/">TEMPLATED</a>
 		</div>
 
-
+         <script src="jquery-3.7.1.min.js"></script> 
 	</body></html>
